# researchwiki

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
prompts/: entity_extraction.yaml  entity_synthesis.yaml  entity_verification.yaml  full_evaluation.yaml  gap_finder.yaml  hyde_expansion.yaml  kg_gap_analysis.yaml  multi_query_expansion.yaml  newsletter_closing.yaml  newsletter_highlights.yaml  newsletter_introduction.yaml  newsletter_title.yaml  newsletter_title_rephrase.yaml  prompt_rewriter.yaml  relationship_evidence.yaml  relevancy_filter.yaml
scripts/: eval.ps1
src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  runtime.rs  startup.rs  state.rs  tray.rs
src/models/: article.rs  gather.rs  job.rs  knowledge_graph.rs  library.rs  mod.rs  newsletter.rs  prompt.rs  settings.rs  trace.rs  workspace.rs
src/services/: articles.rs  chunker.rs  embedding.rs  evaluator.rs  fetcher.rs  fts.rs  graph_rag.rs  hyde.rs  jobs.rs  knowledge_graph.rs  library.rs  llm.rs  mod.rs  multi_query.rs  newsletter.rs  pdf_text.rs  pipeline.rs  prompts.rs  rrf.rs  scheduler.rs  screener.rs  settings.rs  text_extractor.rs  traces.rs  workspace.rs
src/ui/: first_run.rs  i18n.rs  mod.rs  style.rs  toast.rs
src/ui/panels/: articles.rs  dashboard.rs  gap_bridge.rs  gather.rs  knowledge_graph.rs  mod.rs  newsletter.rs  prompts.rs  settings.rs  traces.rs  wiki.rs  workspace.rs
src/web/: mod.rs
templates/web/: page.html
web/static/: web.css  web.js
