[package]
name = "researchwiki"
version = "0.1.0"
edition = "2024"
description = "Native desktop app for gathering academic articles and building a knowledge-graph wiki"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
directories = "5"
dotenvy = "0.15.7"
futures = "0.3"
quick-xml = "0.38.3"
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
scraper = "0.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlite-vec = "0.1.9"
thiserror = "2.0.17"
tiktoken-rs = "0.6"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "fs", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
zerocopy = { version = "0.8", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
