[package]
name = "researchwiki"
version = "0.1.6"
edition = "2024"
description = "Native desktop app for gathering academic articles and building a knowledge-graph wiki"
license = "MIT"

# `cargo install cargo-bundle` then `cargo bundle --release` produces a native
# bundle (e.g. macOS .app) that launches without a terminal and carries the
# app icon. cargo-bundle needs a standard icon size so it can generate the
# platform icon (.icns/.ico) from the PNG.
[package.metadata.bundle]
name = "ResearchWiki"
identifier = "com.researchwiki.app"
icon = ["assets/app-icon.png"]
category = "public.app-category.productivity"
short_description = "Gather academic articles and build a knowledge-graph wiki."

# cargo-bundle needs per-binary metadata when `--bin researchwiki` is used;
# otherwise it falls back to lowercase names and misses the app icon.
[package.metadata.bundle.bin.researchwiki]
name = "ResearchWiki"
identifier = "com.researchwiki.app"
icon = ["assets/app-icon.png"]
category = "public.app-category.productivity"
short_description = "Gather academic articles and build a knowledge-graph wiki."

[dependencies]
anyhow = "1.0.100"
askama = "0.12.1"
axum = { version = "0.8.6", features = ["form", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
directories = "5"
dotenvy = "0.15.7"
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.32"
egui_extras = "0.32"
egui_plot = "0.33"
futures = "0.3"
rfd = "0.17"
quick-xml = "0.38.3"
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
scraper = "0.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
pdf-extract = "0.10.0"
sha2 = "0.10.9"
sqlite-vec = "0.1.9"
thiserror = "2.0.17"
tiktoken-rs = "0.6"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "fs", "sync", "process", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
# Pin winit to 0.30.11 — 0.30.12 and 0.30.13 hit a type-inference regression
# on rustc 1.93+ (E0282 in winit::window). Holds eframe's transitive choice
# back to a version that compiles.
winit = "=0.30.11"
zerocopy = { version = "0.8", features = ["derive"] }
egui_graphs = "0.27"
egui_commonmark = "0.21"
petgraph = { version = "0.8", default-features = false, features = ["stable_graph"] }
egui-phosphor = "0.10"
image = { version = "0.25.10", default-features = false, features = ["png"] }
include_dir = "0.7.4"
mime_guess = "2.0.5"
pulldown-cmark = { version = "0.13.3", default-features = false }
tower-http = { version = "0.6.7", features = ["trace"] }

# Tray icon works on both Windows and macOS (tray-icon links system frameworks
# natively — no pkg-config). Linux is excluded (its tray needs GTK/appindicator).
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
raw-window-handle = "0.6"
tray-icon = { version = "0.23.1", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
